# generate_sc_behaviour

./: Auction.daml  Hello.daml  README.md  auto.json  dune-project  test.txt
_build/: .db  .digest-db  log
_build/default/: META.generate_sc_behaviour  generate_sc_behaviour.dune-package  generate_sc_behaviour.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/automata/: automata.cma  automata.cmxa  automata.cmxs  automata.ml-gen  types_j.ml  types_j.mli
_build/default/automata/.automata.objs/: automata__Types_j.impl.all-deps  automata__Types_j.impl.d  automata__Types_j.intf.d  automata__Types_t.impl.d  automata__Types_t.intf.d
_build/default/automata/.merlin-conf/: lib-automata
_build/default/lib/: dfa.ml  extractSC.ml  graph.ml  langgen.ml  lib_generate.cma  lib_generate.cmxa  lib_generate.cmxs  lib_generate.ml-gen  model.ml  regex.ml
_build/default/lib/.lib_generate.objs/: lib_generate__Dfa.impl.d  lib_generate__Dfa.intf.all-deps  lib_generate__Dfa.intf.d  lib_generate__ExtractSC.impl.d  lib_generate__Graph.impl.all-deps  lib_generate__Graph.impl.d  lib_generate__Langgen.impl.all-deps  lib_generate__Langgen.impl.d  lib_generate__Model.impl.d  lib_generate__Parsing.impl.all-deps  lib_generate__Regex.impl.d  (+4 more)
_build/default/segments/: Segments.mli  segments.cma  segments.cmxa  segments.cmxs  segments__.ml-gen
automata/: dune  types.atd  types_t.ml
lib/: dfa.ml  dfa.mli  dune  extractSC.ml  graph.ml  langgen.ml  regenerate.ml  regex.ml
segments/: dune
test/: dune
test/re/: dune  test_re.ml
(+224 files in other folders)
